# KI-Project

./: .gitignore  CLAUDE.md  README.md  eda.ipynb  main.py  missing_value_analysis.ipynb  notebook.ipynb  outliers_analysis.ipynb  plan.md  pyproject.toml
data/processed/: test.csv  train.csv  val.csv
data/raw/: weather.csv
notebooks/: 00_data_preparation.ipynb  01_exploration.ipynb  01_univariate_analyse.ipynb  02_feature_engineering.ipynb  02_naive_baseline.ipynb  02_outliers_analysis.ipynb  03_feature_engineering.ipynb  03_naive_analysis.ipynb  03_naive_baseline.ipynb  03_splitting.ipynb  03a_naive_persistence.ipynb  03b_naive_climatology.ipynb  04_feature_engineering.ipynb  04_linear_regression.ipynb  04_splitting.ipynb  04b_feature_importance.ipynb  05_grundlast_analyse.ipynb  05_linear_regression.ipynb  06_random_forest.ipynb  07_xgboost.ipynb  eda.ipynb  notebook.ipynb  präsi_prep_annika.ipynb  univariate_analyse.ipynb
notebooks/hypothesen/: H01_naive_vs_weather.ipynb  H02_temporal_features_impact.ipynb  H03_cloud_coverage_vs_forecast_error.ipynb  H04_linear_vs_nonlinear_models.ipynb  H05_lag_features_impact.ipynb
notebooks/models/: 00_naive_baseline.ipynb  01_linear_regression.ipynb  02_random_forest.ipynb
notebooks/visualizations/: literature_comparison.ipynb  rf_sample_day.ipynb
results/00_naive_baseline/: climatology_seasonal.json
results/01_linear_regression/: linear_regression_base.json  linear_regression_base_with_time.json
results/02_random_forest/: random_forest_B_mit_zeit.json  random_forest_base.json  random_forest_base_with_time.json  (+1 more)
(+23 files in other folders)
