[project]
name = "ki-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "pandas-stubs>=3.0.0.260204",
    "scipy-stubs>=1.17.1.1",
]
